2009-02-18  Jason Merrill  <jason@redhat.com>

	PR target/39179
	* g++.dg/opt/const6.C: New test.

2009-02-18  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/callabi/callabi.exp: Moved to ...
	* gcc.target/x86_64/abi/callabi/callabi.exp: Here.  Only run
	in 64bit mode.

	* gcc.target/x86_64/abi/callabi/func-1.c: Don't check target.
	* gcc.target/x86_64/abi/callabi/func-indirect.c: Likewise.
	* gcc.target/x86_64/abi/callabi/func-indirect.c: Likewise.
	* gcc.target/x86_64/abi/callabi/pr38891.c: Likewise.
	* gcc.target/x86_64/abi/callabi/vaarg-1.c: Likewise.
	* gcc.target/x86_64/abi/callabi/vaarg-2.c: Likewise.
	* gcc.target/x86_64/abi/callabi/vaarg-3.c: Likewise.

	* gcc.dg/callabi/callabi.h: Moved to ...
	* gcc.target/x86_64/abi/callabi/callabi.h: Here.

	* gcc.dg/callabi/func-1.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/func-1.c: Here.

	* gcc.dg/callabi/func-indirect.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/func-indirect.c: Here.

	* gcc.dg/callabi/pr38891.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/pr38891.c: Here.

	* gcc.dg/callabi/vaarg-1.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/vaarg-1.c: Here.

	* gcc.dg/callabi/vaarg-2.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/vaarg-2.c: Here.

	* gcc.dg/callabi/vaarg-3.c: Moved to ...
	* gcc.target/x86_64/abi/callabi/vaarg-3.c: Here.

2009-02-17  Xuepeng Guo  <xuepeng.guo@intel.com>

	PR target/38891
	* gcc.dg/callabi/pr38891.c: New.

2009-02-17  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.dg/callabi/callabi.exp: New.

2009-02-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39082
	* g++.dg/compat/struct-layout-1_generate.c (dg_options): Add
	-Wno-abi for x86.
	* gcc.dg/compat/struct-layout-1_generate.c (dg_options): Likewise.

	* gcc.target/i386/pr39082-1.c: New.

	* gcc.target/x86_64/abi/abi-x86_64.exp (additional_flags): Add
	-Wno-abi.

	* gcc.target/x86_64/abi/args.h (XMM_T): Add _m64 and _m128 if
	CHECK_M64_M128 is defined.
	(check_f_arguments): Add "do".
	(check_vector_arguments): New.