@@ -2,9 +2,10 @@
 // Init should not be hidden, so calling it should use the PLT.
 
 // { dg-options "-fpic" }
-// { dg-do compile { target i?86-*-* x86_64-*-* *-*-darwin* } }
+// { dg-do compile { target i?86-*-* x86_64-*-* } }
+// { dg-skip-if "" { *-*-darwin* } { "*" } { "" } }
 // { dg-require-visibility "" }
-// { dg-final { scan-assembler "InitEv@PLT|indirect_symbol.*InitEv" } }
+// { dg-final { scan-assembler "InitEv@PLT" } }
 
 #pragma GCC visibility push(hidden)
 struct __attribute__ ((visibility ("default"))) nsINIParser
